Update to Superstição
This also includes a fix to the waitingPlanets logic, updates to the playground page content and adjustments to some particles.

--- a/Beat.playgroundbook/Contents/Manifest.plist
+++ b/Beat.playgroundbook/Contents/Manifest.plist
@@ -23,6 +23,6 @@
 	<key>UserAutoImportedAuxiliaryModules</key>
 	<array/>
 	<key>UserModuleMode</key>
-	<string>Full</string>
+	<string>Limited</string>
 </dict>
 </plist>
