--- a/Beat.playgroundbook/Contents/Manifest.plist
+++ b/Beat.playgroundbook/Contents/Manifest.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>ImageReference</key>
-	<string>PurpleBackground.png</string>
+	<string>PlaygroundIcon.png</string>
 	<key>Chapters</key>
 	<array>
 		<string>Chapter1.playgroundchapter</string>
